Se agrega la vista de formulario actividad y el ConfigDataRest